added back2youu image

--- a/index.html
+++ b/index.html
@@ -516,14 +516,14 @@
   </div>
 
   <ol class="timeline-list">
-
-    <li class="timeline-item">
-      <h4 class="h4 timeline-item-title">Social Media Manager – Golzza</h4>
-      <span>March 2025 — May 2025</span>
+   <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">Campus Ambassador – GSSoC'25</h4>
+      <span>2025</span>
       <p class="timeline-text">
-        Managed the brand’s content, campaigns, and audience engagement across Instagram to boost visibility among university students.
+        Promoting open-source culture and events, guiding juniors, and representing the GSSoC community at campus level.
       </p>
     </li>
+    
 
     <li class="timeline-item">
       <h4 class="h4 timeline-item-title">Software Developer – SkillCraft Technologies</h4>
@@ -533,19 +533,21 @@
       </p>
     </li>
 
-    <li class="timeline-item">
-      <h4 class="h4 timeline-item-title">Campus Ambassador – GSSoC'25</h4>
-      <span>2025</span>
-      <p class="timeline-text">
-        Promoting open-source culture and events, guiding juniors, and representing the GSSoC community at campus level.
-      </p>
-    </li>
+ 
 
     <li class="timeline-item">
       <h4 class="h4 timeline-item-title">Tech Content Creator</h4>
       <span>2023 — Present</span>
       <p class="timeline-text">
         Creating educational tech content for Instagram, YouTube, and LinkedIn with 13.3K+ followers, focused on Java, DSA, and project tips.
+      </p>
+    </li>
+
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">Social Media Manager – Golzza</h4>
+      <span>March 2025 — May 2025</span>
+      <p class="timeline-text">
+        Managed the brand’s content, campaigns, and audience engagement across Instagram to boost visibility among university students.
       </p>
     </li>
 
@@ -674,12 +676,12 @@
       </li>
 
       <li class="project-item active" data-filter-item data-category="web development">
-        <a href="https://github.com/aarohidixit31/Lost-and-Found" target="_blank">
+        <a href="https://back2youu.netlify.app/" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box">
               <ion-icon name="eye-outline"></ion-icon>
             </div>
-            <img src="./assets/images/project-2.png" alt="Lost and Found" loading="lazy">
+            <img src="./assets/images/lost2.png" alt="Lost and Found" loading="lazy">
           </figure>
           <h3 class="project-title">Lost & Found</h3>
           <p class="project-category">Full Stack</p>
